- Added Tween animation - Fixed Frame animation overlapping - Removed hardcoded text

--- a/SamadAssign33/src/main/res/layout/fragment_agha.xml
+++ b/SamadAssign33/src/main/res/layout/fragment_agha.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/red"
     tools:context=".SamadActivity" >
 
     <Button
@@ -15,8 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="576dp"
-        android:onClick="starting"
-        android:text="Start"
+        android:onClick="startAnimation"
+        android:text="@string/startframe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -39,21 +40,23 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
         android:layout_marginTop="576dp"
-        android:onClick="stopping"
-        android:text="Stop"
+        android:onClick="stopAnimation"
+        android:text="@string/stopframe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </Button>
 
     <ImageView
-        android:id="@+id/imageView_Boy"
-        android:layout_width="344dp"
-        android:layout_height="501dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/banana0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/imageViewBanana"
+        android:layout_width="182dp"
+        android:layout_height="288dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="212dp"
+        android:contentDescription="@string/bananadance"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+    </ImageView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
