--- a/SamadAssign33/src/main/res/layout/fragment_agha.xml
+++ b/SamadAssign33/src/main/res/layout/fragment_agha.xml
@@ -24,12 +24,13 @@
     </Button>
 
     <Button
-        android:id="@+id/CameraButton"
+        android:id="@+id/samadPermbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Camera"
+        android:onClick="request"
 
+        android:text="Request Permission"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,8 +50,8 @@
 
     <ImageView
         android:id="@+id/imageViewBanana"
-        android:layout_width="182dp"
-        android:layout_height="288dp"
+        android:layout_width="180dp"
+        android:layout_height="242dp"
         android:layout_marginEnd="104dp"
         android:layout_marginBottom="212dp"
         android:contentDescription="@string/bananadance"
