--- a/SamadAssign33/src/main/res/layout/fragment_n01364908.xml
+++ b/SamadAssign33/src/main/res/layout/fragment_n01364908.xml
@@ -21,7 +21,7 @@
         app:srcCompat="@drawable/earth" />
 
     <Button
-        android:id="@+id/startAnimBtn"
+        android:id="@+id/samadstartAnimBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="160dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/stopAnimBtn"
+        android:id="@+id/samadstopAnimBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="160dp"
@@ -43,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/samadlastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/samadfirstname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
